Move packages folder to root

--- a/source/NuGet.config
+++ b/source/NuGet.config
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+	<add key="repositoryPath" value="$\..\..\packages" />
+  </config>
   <packageSources>
     <add key="Identity* Dev Feed" value="https://www.myget.org/F/identity/" />
     <add key="Nuget" value="https://www.nuget.org/api/v2/" />
