--- a/source/Core/IdentityAdmin.nuspec
+++ b/source/Core/IdentityAdmin.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>IdentityServer3.Admin</id>
-    <version>1.0.0-beta9</version>
-    <title>IdentityServer3.Admin</title>
+    <id>Idfy.IdentityServer3.Admin</id>
+    <version>$version$</version>
+    <title>Idfy.IdentityServer3.Admin</title>
     <authors>Brock Allen, Dominick Baier, Bert Hoorne</authors>
     <owners>Brock Allen, Dominick Baier, Bert Hoorne</owners>
     <projectUrl>https://github.com/IdentityServer/IdentityServer3.Admin</projectUrl>
